--- a/MonoLib/MonoLib.csproj
+++ b/MonoLib/MonoLib.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Async\Extensions.cs" />
     <Compile Include="Delegates.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="MonoTODO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System.Collections.Concurent.Partitioners\EnumerablePartitioner.cs" />
